--- a/Components/Input/src/index.css
+++ b/Components/Input/src/index.css
@@ -7,23 +7,21 @@
 }
 
 .container {
-  border: 1px solid red;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   padding: 100px;
 }
 
 .input-container {
-  border: 1px solid red;
   display: flex;
   align-items: center;
   justify-content: center;
   width: 300px;
-  margin-bottom: 200px;
+  /* margin-bottom: 200px; */
   border-radius: 8px;
   background-color: antiquewhite;
-
 }
 
 .input {
@@ -34,4 +32,46 @@
   background-color: antiquewhite;
 }
 
+input:focus{
+  outline: none;
+}
 
+.render-options {
+  position: relative;
+  width: 300px;
+}
+
+.options-container {
+  /* border: 1px solid red; */
+  position: absolute;
+  top: calc(100% + 0.25em);
+  width: 100%;
+  display: flex;
+  gap: 5px;
+  flex-direction: column;
+  border-radius: 8px;
+  background: antiquewhite;
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.12);
+}
+
+.options {
+  /* border: 1px solid green; */
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  gap: 4px;
+  font-size: 13px;
+  padding: 10px;
+
+  cursor: pointer;
+  background-color: antiquewhite;
+  border: none;
+}
+
+.options>img{
+  width: 30px;
+}
+
+.options:hover{
+  background-color:rgb(246, 212, 158) ;
+}
