--- a/Components/Input/src/index.css
+++ b/Components/Input/src/index.css
@@ -43,6 +43,8 @@ input:focus {
   outline: none;
 }
 
+
+
 .render-options {
   position: relative;
   width: 300px;
@@ -51,14 +53,15 @@ input:focus {
 .options-container {
   /* border: 1px solid red; */
   position: absolute;
+  height:fit-content;
   top: calc(100% + 0.25em);
   width: 100%;
   display: flex;
-  gap: 5px;
   flex-direction: column;
   border-radius: 8px;
   background: antiquewhite;
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.12);
+  overflow-y: auto;
 }
 
 .options {
@@ -79,7 +82,8 @@ input:focus {
   width: 30px;
 }
 
-.options:hover {
+.options:hover,
+.highlight {
   background-color: rgb(246, 212, 158);
 }
 
